# human

./: .cruft.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
pelican/plugins/human/: __init__.py  human.py  test_human.py
pelican/plugins/human/test_data/: human.json  pelicanconf.py  publishconf.py
pelican/plugins/human/test_data/content/data/: human.toml
pelican/plugins/human/test_data/content/posts/: pelican.md
